# Sion-Cient

./: .env.example  .gitignore  .logsionclient-flammemob.log.kate-swp  README.md  build-windows.ps1  builderror  buildwindowserro  eslint.config.js  index.html  install-linux.sh  package.json  run-cef.sh  vite.config.ts  vitest.config.ts
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
build-scripts/: build-android.sh  build-appimage.sh  build-windows.ps1  create-release.sh  fetch-cef-codecs.ps1  fetch-cef-codecs.sh  install-linux.sh  run-cef.sh
patches/: cef-desktop-media-picker.md
public/locales/en/: translation.json
public/locales/fr/: translation.json
src/: App.tsx  global.d.ts  i18n.ts  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: cursor_overlay.rs  denoise.rs  lib.rs  portal_shortcuts.rs  summarize.rs  system_audio.rs  transcribe.rs  win_shortcuts.rs
src-tauri/vendor-softbuffer/: Cargo.toml
src-tauri/vendor-softbuffer/src/backends/wayland/: buffer.rs
src/assets/sounds/: README.md
src/components/: ConnectionStatusBanner.tsx  RecoveryKeyModal.tsx
src/components/admin/: AdminActions.tsx  AdminStats.tsx  FederationInfo.tsx  PendingUsers.tsx  RegistrationTokens.tsx
src/components/chat/: AttachButton.tsx  AudioTrimmer.tsx  ChatHeader.tsx  ChatInput.tsx  DropZone.tsx  EmojiGridPanel.tsx  EmojiPickerButton.tsx  ExternalAudioImport.tsx  ExternalVideoImport.tsx  FilePreview.tsx  HotkeyCaptureModal.tsx  LargeMessageModal.tsx  LinkPreview.tsx  MarkdownRenderer.tsx  MemberPanel.tsx  Message.tsx  MessageList.tsx  PinnedBar.tsx  PollCreateModal.tsx  PollMessage.tsx  ScreenShareOptionsModal.tsx  ScreenShareView.tsx  SoundboardPanel.tsx  SoundboardUploadModal.tsx  TranscriptInviteBanner.tsx  TranscriptPanel.tsx  VoiceCueEditor.tsx
src/components/icons/: index.tsx
src/components/layout/: AdminPanel.tsx  DownloadToast.tsx  MainArea.tsx  SettingsPanel.tsx  Sidebar.tsx  UpdateBanner.tsx
src/components/mobile/: MobileVoiceBar.tsx
src/components/sidebar/: AccountPopover.tsx  ChannelIcon.tsx  ChannelItem.tsx  ChannelList.tsx  MatrixRain.tsx  ServerHeader.tsx  UserAvatar.tsx  UserContextMenu.tsx  UserControls.tsx  VerificationBanner.tsx
src/hooks/: useClickOutside.ts  useIsMobile.ts  useKeyboardShortcuts.ts  useLiveKit.ts  useMatrix.ts  useMutedSpeakDetection.ts  useVoiceChannel.ts
src/pages/: LoginPage.tsx
src/services/: adminCommandService.ts  adminService.test.ts  adminService.ts  androidVoiceService.ts  audioContext.ts  audioTrim.ts  backfillTranscript.test.ts  cefAudioShim.ts  cursorOverlayService.ts  denoiseService.ts  denoiseShim.ts  ffmpegInstall.ts  livekitService.ts  livekitTokenService.ts  matrixCallMember.test.ts  matrixRTCE2EE.ts  matrixService.ts  pushService.ts  sessionPersist.ts  soundService.ts  soundboardHotkeys.ts  soundboardService.ts  speakingDetector.ts  systemAudioService.ts  transcriptionService.ts  transcriptionSession.test.ts  updateService.ts  voiceChannelSounds.ts  ytdlpInstall.ts  ytdlpService.ts
src/stores/: extractMessages.test.ts  extractVoiceUsers.test.ts  useAdminStore.ts  useAppStore.ts  useAuthStore.ts  useLiveKitStore.ts  useMatrixStore.ts  usePendingUsersStore.ts  useRecentEmojisStore.ts  useSettingsStore.ts  useTranscriptStore.test.ts  useTranscriptStore.ts
src/types/: auth.ts  livekit.ts  matrix.ts
src/utils/: decryptMedia.ts  emojiData.ts  keyCombo.test.ts  keyCombo.ts  mentions.test.ts  mentions.ts  messageCache.test.ts  messageCache.ts  openExternal.ts  transcriptScope.test.ts  transcriptScope.ts
