[package]
name = "sion-client"
version = "0.8.2"
description = "Sion Client - Voice/Text client based on Matrix + LiveKit"
authors = ["Sion"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
open = "5"
reqwest = { version = "0.12", features = ["rustls-tls", "cookies", "json"], default-features = false }
urlencoding = "2"
scraper = "0.22"
base64 = "0.22"
tauri-plugin-notification = "2.3.3"

# Desktop-only dependencies
[target.'cfg(not(target_os = "android"))'.dependencies]
tauri-runtime-cef = { git = "https://github.com/tauri-apps/tauri", rev = "a9525cf", default-features = false, optional = true }
cef = { version = "=144.1.0", default-features = false, optional = true }
rdev = { git = "https://github.com/rustdesk-org/rdev" }
cpal = "0.15"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[features]
default = ["cef"]
cef = ["tauri/cef", "tauri-runtime-cef", "dep:cef"]

# Patches CEF — nécessaire pour le build desktop
# Pour build Android: utiliser ./build-scripts/build-android.sh qui désactive le CEF
[patch.crates-io]
tauri = { git = "https://github.com/tauri-apps/tauri", rev = "a9525cf" }
tauri-build = { git = "https://github.com/tauri-apps/tauri", rev = "a9525cf" }
tauri-macros = { git = "https://github.com/tauri-apps/tauri", rev = "a9525cf" }
tauri-runtime = { git = "https://github.com/tauri-apps/tauri", rev = "a9525cf" }
tauri-runtime-wry = { git = "https://github.com/tauri-apps/tauri", rev = "a9525cf" }
tauri-utils = { git = "https://github.com/tauri-apps/tauri", rev = "a9525cf" }
tauri-plugin = { git = "https://github.com/tauri-apps/tauri", rev = "a9525cf" }
