[package]
name = "sion-client"
version = "1.4.6"
description = "Sion Client - Voice/Text client based on Matrix + LiveKit"
authors = ["Sion"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# Raw bytes ↔ f32 slice reinterpretation for the denoise IPC path — keeps
# audio frames out of JSON serde (which plateaued the pipeline below real-time).
# `extern_crate_alloc` exposes `pod_collect_to_vec` for the aligned bulk copy
# from the 1-byte-aligned `Vec<u8>` delivered by Tauri into a `Vec<f32>`.

tauri = { version = "2", features = ["devtools"] }
tauri-plugin-log = "2"
open = "5"
reqwest = { version = "0.12", features = ["rustls-tls", "cookies", "json"], default-features = false }
urlencoding = "2"
scraper = "0.22"
base64 = "0.22"
dirs = "6"
tauri-plugin-notification = "2.3.3"

# Desktop-only dependencies (all platforms except Android)
[target.'cfg(not(target_os = "android"))'.dependencies]
tauri-runtime-cef = { git = "https://github.com/tauri-apps/tauri", rev = "7372c8ee", default-features = false, optional = true }
cef = { version = "148", default-features = false, optional = true }
tauri-plugin-global-shortcut = "2"
# Persists window position/size/maximised/fullscreen state across launches
# (desktop only — mobile windows are fullscreen and managed by the OS).
tauri-plugin-window-state = "2"
# Native file picker — used by the "Parcourir" button to select an ffmpeg.exe.
# (tauri-plugin-dialog can't be used: it pulls tauri-plugin-fs on schemars 0.8
# while the CEF fork uses schemars 1.0 → build conflict.)
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }
tungstenite = "0.24"
cpal = "0.15"

# Native cursor-overlay window: the Tauri-CEF fork doesn't propagate
# `transparent: true` to child webviews on Linux, so we bypass webview
# entirely and paint a transparent, click-through window ourselves.
# - `winit` creates the window (ARGB, always-on-top, no decorations, no
#   hittest), `with_any_thread(true)` lets us spawn the event loop off the
#   main thread so it coexists with Tauri's own runtime.
# - `tiny-skia` does the 2D rasterisation (cursor arrows + click ripples)
#   in pure software — no GL context, ~50-200 µs per frame for 10 cursors.
# - `softbuffer` blits the pixmap into the native window surface.
winit = { version = "0.30", default-features = false, features = ["x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita-notitle", "rwh_06"] }
tiny-skia = "0.11"
softbuffer = "0.4"
raw-window-handle = "0.6"
# Glyph rasteriser for the cursor name pill. Pulled in once per overlay
# session — DejaVu Sans Bold (~700 KB) is embedded via include_bytes! so
# we don't depend on the host having any specific font installed.
ab_glyph = "0.2"


# Linux-only dependencies (rdev for evdev keyboard capture)
[target.'cfg(target_os = "linux")'.dependencies]
rdev = { git = "https://github.com/rustdesk-org/rdev" }
# Background global shortcuts via the XDG portal (org.freedesktop.portal.
# GlobalShortcuts). The X11-grab path (tauri-plugin-global-shortcut) resolves
# keys through US keysyms, so layout-dependent keys (² on AZERTY = Backquote)
# either fail to register or grab the wrong key — the portal lets the
# compositor do the capture instead, and works in front of native Wayland
# windows too. Already in-tree transitively via rfd's xdg-portal feature.
ashpd = { version = "0.11", default-features = false, features = ["tokio"] }
# keysym → name ("XK_twosuperior") for building layout-aware portal triggers.
xkeysym = "0.2"
futures-util = { version = "0.3", default-features = false }
# Used to mark the cursor overlay sticky (on all virtual desktops) via the
# EWMH `_NET_WM_STATE_STICKY` ClientMessage. The overlay runs on XWayland, so
# KWin/Mutter honor X11 window-state hints. Already in the lockfile (transitive
# via winit's x11 backend) — promoted to a direct dep, ~0 compile cost.
x11rb = "0.13"
# NOTE: `pipewire = "0.9"` was added here for the screen-share-audio
# exclusion path (commit 2a) but removed because libpipewire's static
# constructors (run before main()) conflict with CEF's GLib/Wayland init
# order — the process segfaults inside libcef.so's `OnWebContentsAttached`
# before any of our code runs. Future re-introduction needs lazy loading
# via `libloading` (dlopen at first capture call, not at process start)
# or — simpler — switch the enumeration path to a `pw-cli ls Node`
# subprocess parse, mirroring how we already use `pactl` elsewhere.

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

# Windows-only dependencies (WASAPI process-loopback exclude for screen-share
# audio that excludes Sion's own output — Windows 11 / Server 2022 build
# 20348+ via AUDCLNT_PROCESSLOOPBACK_EXCLUDE_TARGET_PROCESS_TREE).
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_System_SystemInformation",
    "Win32_Foundation",
    "implement",
] }
# `implement` macro from windows = 0.58+ requires windows-core to be present
# as a direct dependency (it's no longer re-exported transitively).
windows-core = "0.58"

[features]
default = ["cef"]
cef = ["tauri/cef", "tauri-runtime-cef", "dep:cef"]

# serde_json is on the IPC hot path; keep it optimized even in dev builds.
[profile.dev.package.serde_json]
opt-level = 3

# Patches CEF — nécessaire pour le build desktop
# Pour build Android: utiliser ./build-scripts/build-android.sh qui désactive le CEF
[patch.crates-io]
tauri = { git = "https://github.com/tauri-apps/tauri", rev = "7372c8ee" }
tauri-build = { git = "https://github.com/tauri-apps/tauri", rev = "7372c8ee" }
tauri-macros = { git = "https://github.com/tauri-apps/tauri", rev = "7372c8ee" }
tauri-runtime = { git = "https://github.com/tauri-apps/tauri", rev = "7372c8ee" }
tauri-runtime-wry = { git = "https://github.com/tauri-apps/tauri", rev = "7372c8ee" }
tauri-utils = { git = "https://github.com/tauri-apps/tauri", rev = "7372c8ee" }
tauri-plugin = { git = "https://github.com/tauri-apps/tauri", rev = "7372c8ee" }

# Vendored softbuffer with the Wayland buffer format patched from `Xrgb8888`
# to `Argb8888`. Without this, the cursor-overlay window appears as an opaque
# black rectangle on KDE/GNOME Wayland because the compositor discards the
# alpha bits softbuffer writes. See vendor-softbuffer/src/backends/wayland/buffer.rs.
# MUST live under [patch.crates-io] — softbuffer comes from crates-io. (It was
# mistakenly placed under the tauri git-patch section below, so Cargo looked
# for `softbuffer` in the tauri git repo → [[patch.unused]] → black overlay.)
softbuffer = { path = "vendor-softbuffer" }

# Redirect the git-sourced tauri-runtime-cef (pulled both directly AND via the
# `tauri/cef` feature) to our vendored, patched copy — without this patch the
# unpatched git crate would also be compiled and would be the one whose CEF
# client/handler runs. The vendored crate's own tauri-runtime/tauri-utils deps
# point at the same rev, so everything unifies on one instance. See
# vendor/tauri-runtime-cef.
[patch."https://github.com/tauri-apps/tauri"]
tauri-runtime-cef = { path = "vendor/tauri-runtime-cef" }
